--- a/ireland_app/templates/contactus.html
+++ b/ireland_app/templates/contactus.html
@@ -10,36 +10,39 @@
   <div class="container">
 
     <div class="section-title" data-aos="zoom-out">
+      <br />
+      <br />
+      <br />
       <h2>Contact</h2>
       <p>Contact Us</p>
     </div>
 
-    <div class="row mt-5">
-
-      <div class="col-lg-4" data-aos="fade-right">
-        <div class="info">
-          <div class="address">
-            <i class="bi bi-geo-alt"></i>
-            <h4>Location:</h4>
-            <p>coming soon</p>
-          </div>
-
-          <div class="email">
-            <i class="bi bi-envelope"></i>
-            <h4>Email:</h4>
-            <a href="mailto:info@visatoireland.com">
-            <p>info@visatoireland.com</p></a>
-          </div>
-
-          <div class="phone">
-            <i class="bi bi-phone"></i>
-            <h4>Call:</h4>
-            <p>coming soon</p>
-          </div>
-
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="info-box mb-4">
+          <i class="bx bx-map"></i>
+          <h3>Our Address</h3>
+          <p>Coming soon</p>
         </div>
-
       </div>
+
+      <div class="col-lg-3 col-md-6">
+        <div class="info-box  mb-4">
+          <i class="bx bx-envelope"></i>
+          <h3>Email Us</h3>
+          <p>coming soon</p>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6">
+        <div class="info-box  mb-4">
+          <i class="bx bx-phone-call"></i>
+          <h3>Call Us</h3>
+          <p>coming soon</p>
+        </div>
+      </div>
+
+    </div>
       <div class="row">
 
         <div class="col-lg-6 ">
@@ -50,24 +53,24 @@
 
         <form method="POST">{% csrf_token %}
         <div class="form-row">
-          <div class="form-group">
+          <div class="form-group mt-3">
             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="text" data-msg="Please enter your name" />
             <div class="validate"></div>
           </div>
-          <div class="form-group" style="line">
+          <div class="form-group mt-3" style="line">
             <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
             <div class="validate"></div>
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group mt-3">
           <input type="number" class="form-control" name="phone" id="subject" placeholder="Phone Number" data-rule="minlen:4" data-msg="Please enter your mobile number" />
           <div class="validate"></div>
         </div>
-        <div class="form-group">
+        <div class="form-group mt-3">
           <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-msg="Please enter your message" />
           <div class="validate"></div>
         </div>
-        <div class="form-group">
+        <div class="form-group mt-3">
           <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
           <div class="validate"></div>
         </div>
@@ -100,6 +103,7 @@
         </div> -->
         <div class="form-group mt-3">
           <div class="g-recaptcha" data-sitekey="{{SITE_KEY}}"></div>
+          <br />
         </div>
         <div class="text-center"><input class="submit1" style="background: #ef6603; border-radius: 50px;border:0;  padding: 10px 24px;  color: #fff;  transition: 0.4s;"type="submit" value = "Send Message"></div>
       </form>
@@ -117,15 +121,15 @@
     padding-bottom: 30px;
   }
   </style>
- 
+
   <section>
- 
+
     <div class="section-title">
- 
+
       <h1 style="text-align: center; padding-bottom: 20px;">Countries we serve</h1>
       <p></p>
     </div>
- 
+
     <div class="map" id="chartdiv">
       <div style="width: 100%;
     height: 100%;
@@ -133,10 +137,10 @@
     overflow: hidden;
     left: -0.5px;
     top: -0.5px;">
- 
+
     </div>
     <!-- <div class="map" id="chartdiv"></div> -->
- 
+
   </section>
  <!-- End Why Us Section -->
 
